# portfolio

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  Justfile  README.md  db.js  develop.md  docker-compose.yml  index.html  logic.js  persistence.js  portafolio-dividendos.csv  portfolio-operaciones-25.csv  portfolio-operaciones.csv  portfolio-transferencias.csv  requirements.txt  script.js
.codex/: AGENTS.md
backend/: db.py  fx.py  importer.py  logging_config.py  prices.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  main.py  portfolio_service.py
backend/tests/: test_cash_series.py  test_fx_sync.py  test_import_filtering.py  test_import_trades_backend.py  test_net_transfers.py  test_portfolio_value.py  test_run_importer.py  test_series_helpers.py  test_split_trade_rows.py  test_trades_options.py  test_transfers_series.py
docs/: api-endpoints.md  develop.md  metrics.md  requirements.csv  requirements.md  ui-structure.md
frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.html  app.component.spec.ts  (+1 more)
ng-portfolio/: README.md  angular.json  package-lock.json  package.json
ng-portfolio/src/: main.ts
portfolio_manager/accounts/: forms.py  tests.py  urls.py  views.py
portfolio_manager/portfolio/: admin.py  forms.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
portfolio_manager/portfolio_manager/: settings.py  urls.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+65 files in other folders)
