[project]
name = "portfolio-backend"
version = "0.1.0"
description = "Backend FastAPI para la aplicación de portfolio"
dependencies = [
    "fastapi==0.121.3",
    "platformdirs==4.3.6",
    "python-dotenv==1.0.1",
    "uvicorn[standard]==0.38.0",
    "requests==2.32.3",
    "yfinance==0.2.66",
    "pytest==8.2.2",
    "httpx==0.27.2"
]
