[package]
name = "portfolio-desktop"
version = "0.1.0"
edition = "2021"
description = "Wrapper de escritorio Tauri para la app de portfolio"
authors = ["edavidfs"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
rusqlite = { version = "0.31", features = ["bundled"] }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
